more additions to the webinterface

--- a/web/src/pug/partials/fwupdate.pug
+++ b/web/src/pug/partials/fwupdate.pug
@@ -16,4 +16,4 @@
                         .col-3
                             button.btn.btn-lg.mx-2(type='submit') ${{ index.sysconfig.firmware.submit }}$
         .modal-footer
-            #fwinfo
+            #fwinfo(rv-text="version")
