--- a/web/src/pug/partials/reset.pug
+++ b/web/src/pug/partials/reset.pug
@@ -9,6 +9,6 @@
                 p ${{ index.sysconfig.reset.description }}$
                     .columns
                         .col-6.column
-                            button.btn.btn-lg.modal-reset-toggle ${{ index.sysconfig.reset.cancel }}$
+                            button.btn.btn-lg.modal-reset-toggle(rv-on-click='toggleResetModal') ${{ index.sysconfig.reset.cancel }}$
                         .col-6.column
                             button.btn.btn-error.btn-lg.float-right ${{ index.sysconfig.reset.confirm }}$
