--- a/web/src/pug/partials/tabselector.pug
+++ b/web/src/pug/partials/tabselector.pug
@@ -2,7 +2,6 @@ ul.tab.tab-block
     li.tab-item.active#colorconfig-tab
         a(href="#colorconfig", onclick='return false;') ${{ index.nav.color }}$
     li.tab-item#ledconfig-tab
-        a(href="#ledconfig", onclick='return false;') ${{ index.nav.time }}$
+        a(href="#ledconfig", onclick='return false;') ${{ index.time }}$
     li.tab-item#sysconfig-tab
         a(href="#sysconfig", onclick='return false;') ${{ index.nav.sys }}$
-
