Remove small js issues

--- a/web/src/pug/partials/sysconfig.pug
+++ b/web/src/pug/partials/sysconfig.pug
@@ -71,5 +71,5 @@
 
     footer.text-gray ESP NeoPixel Clock 
         ins(rv-text='version') 
-        span  ${{ index.sysconfig.by }}$ Merlin Schumacher.
-        a(href='https://github.com/merlinschumacher/esp8266-clock',target='_blank') ${{ index.sysconfig.source }}$
+        span  ${{ index.sysconfig.by }}$ Merlin Schumacher. 
+        a(href='https://github.com/merlinschumacher/esp8266-clock',target='_blank',rel='noopener') ${{ index.sysconfig.source }}$
