add wifi reset function

--- a/web/src/pug/pages/index.pug
+++ b/web/src/pug/pages/index.pug
@@ -7,3 +7,4 @@ block content
     include ../partials/sysconfig.pug
   include ../partials/fwupdate.pug
   include ../partials/reset.pug
+  include ../partials/wifi.pug
