--- a/web/src/pug/partials/sysconfig.pug
+++ b/web/src/pug/partials/sysconfig.pug
@@ -60,7 +60,7 @@
         .form-group 
             .col-12
                 label.form-switch(for='mqttActive')
-                    input(type='checkbox' id='mqttActive' rv-checked='config.mqttActive')
+                    input.resetneeded(type='checkbox' id='mqttActive' rv-checked='config.mqttActive')
                     i.form-icon
                     span ${{ index.sysconfig.mqtt.active}}$ 
     
@@ -72,31 +72,31 @@
             .col-4
                 label.form-label(for='mqttServer') ${{ index.sysconfig.mqtt.server }}$ 
             .col-8
-                input.form-input(pattern='^([a-zA-Z0-9]([a-zA-Z0-9\-]{0,61 }}$[a-zA-Z0-9])?\.)+[a-zA-Z]{2,6 }}$$', maxlength='64', size='64', required, rv-value='config.mqttServer')
+                input.resetneeded.form-input(pattern='^([a-zA-Z0-9]([a-zA-Z0-9\-]{0,61 }}$[a-zA-Z0-9])?\.)+[a-zA-Z]{2,6 }}$$', maxlength='64', size='64', rv-value='config.mqttServer')
         
         .form-group
             .col-4
                 label.form-label(for='mqttUser') ${{ index.sysconfig.mqtt.user }}$ 
             .col-8
-                input.form-input(maxlength='128', size='64', required, rv-value='config.mqttUser')
+                input.resetneeded.form-input(maxlength='128', size='64', rv-value='config.mqttUser')
         
         .form-group
             .col-4
                 label.form-label(for='mqttPassword') ${{ index.sysconfig.mqtt.password }}$ 
             .col-8
-                input.form-input(type='password', maxlength='128', size='64', required, rv-value='config.mqttPassword')
+                input.resetneeded.form-input(type='password', maxlength='128', size='64', rv-value='config.mqttPassword')
         
         .form-group
             .col-4
                 label.form-label(for='mqttPort') ${{ index.sysconfig.mqtt.port }}$ 
             .col-8
-                input.form-input(type='number', min='1', max='65535', step='1', required, rv-value='config.mqttPort | int')
+                input.resetneeded.form-input(type='number', min='1', max='65535', step='1', rv-value='config.mqttPort | int')
         
         .form-group
             .col-4
                 label.form-label(for='mqttBaseTopic') ${{ index.sysconfig.mqtt.topic }}$ 
             .col-8
-                input.form-input(maxlength='128', size='64', required, rv-value='config.mqttBaseTopic')
+                input.resetneeded.form-input(maxlength='128', size='64', rv-value='config.mqttBaseTopic')
     
     .divider
 
